@@ -5,16 +5,33 @@ On this page, you can learn about the following topics:
 * [Gradle build cache support](#gradle-build-cache-support)
 * [Gradle configuration cache support](#gradle-configuration-cache-support)
 * [The Kotlin daemon and how to use it with Gradle](#the-kotlin-daemon-and-how-to-use-it-with-gradle)
+* [Rolling back to the previous compiler](#rolling-back-to-the-previous-compiler)
 * [Defining Kotlin compiler execution strategy](#defining-kotlin-compiler-execution-strategy)
 * [Kotlin compiler fallback strategy](#kotlin-compiler-fallback-strategy)
+* [Trying the latest language version](#trying-the-latest-language-version)
 * [Build reports](#build-reports)
 
 ## Incremental compilation
 
-The Kotlin Gradle plugin supports incremental compilation. Incremental compilation tracks changes to source files between
-builds so that only the files affected by these changes are compiled.
+The Kotlin Gradle plugin supports incremental compilation, which is enabled by default for Kotlin/JVM and Kotlin/JS projects.
+Incremental compilation tracks changes to files in the classpath between builds so that only the files affected
+by these changes are compiled.
+This approach works with [Gradle's build cache](#gradle-build-cache-support) and supports [compilation avoidance](https://docs.gradle.org/current/userguide/java_plugin.html#sec:java_compile_avoidance).
 
-Incremental compilation is supported for Kotlin/JVM and Kotlin/JS projects, and is enabled by default.
+For Kotlin/JVM, incremental compilation relies on classpath snapshots,
+which capture the API structure of modules to determine when recompilation is necessary.
+To optimize the overall pipeline, the Kotlin compiler uses two types of classpath snapshots:
+
+* **Fine-grained snapshots:** include detailed information about class members, such as properties or functions.
+When member-level changes are detected, the Kotlin compiler recompiles only the classes that depend on the modified members.
+To maintain performance, the Kotlin Gradle plugin creates coarse-grained snapshots for `.jar` files in the Gradle cache.
+* **Coarse-grained snapshots:** only contain the class [ABI](https://en.wikipedia.org/wiki/Application_binary_interface) hash.
+When a part of ABI changes, the Kotlin compiler recompiles all classes that depend on the changed class.
+This is useful for classes that change infrequently, such as external libraries.
+
+> Kotlin/JS projects use a different incremental compilation approach based on history files. 
+>
+{style="note"}
 
 There are several ways to disable incremental compilation:
 
@@ -24,37 +41,15 @@ There are several ways to disable incremental compilation:
 
   The parameter should be added to each subsequent build.
 
-Note: Any build with incremental compilation disabled invalidates incremental caches. The first build is never incremental.
+When you disable incremental compilation, incremental caches become invalid after the build. The first build is never incremental.
 
 > Sometimes problems with incremental compilation become visible several rounds after the failure occurs. Use [build reports](#build-reports)
 > to track the history of changes and compilations. This can help you to provide reproducible bug reports.
 >
-{type="tip"}
+{style="tip"}
 
-### A new approach to incremental compilation
-
-> The new approach to incremental compilation is [Experimental](components-stability.md). It may be dropped or changed at any time.
-> Opt-in is required (see the details below). We encourage you to use it only for evaluation purposes, and we would
-> appreciate your feedback in [YouTrack](https://youtrack.jetbrains.com/issues/KT).
->
-{type="warning"}
-
-The new approach to incremental compilation is available since Kotlin 1.7.0 for the JVM backend in the Gradle build system only. 
-This approach supports changes made inside dependent non-Kotlin modules, includes an improved
-compilation avoidance, and is compatible with the [Gradle build cache](#gradle-build-cache-support).
-
-All of these enhancements decrease the number of non-incremental builds, making the overall compilation time faster. 
-You will receive the most benefit if you use the build cache, or, frequently make changes in non-Kotlin
-Gradle modules.
-
-To enable this new approach, set the following option in your `gradle.properties`:
-
-```none
-kotlin.incremental.useClasspathSnapshot=true
-```
-
-Learn how the new approach to incremental compilation is implemented under the hood in
-[this blog post](https://blog.jetbrains.com/kotlin/2022/07/a-new-approach-to-incremental-compilation-in-kotlin/).
+To learn more about how our current incremental compilation approach works and compares to the previous one,
+see our [blog post](https://blog.jetbrains.com/kotlin/2022/07/a-new-approach-to-incremental-compilation-in-kotlin/).
 
 ## Gradle build cache support
 
@@ -64,23 +59,10 @@ the build outputs for reuse in future builds.
 To disable caching for all Kotlin tasks, set the system property `kotlin.caching.enabled` to `false`
 (run the build with the argument `-Dkotlin.caching.enabled=false`).
 
-If you use [kapt](kapt.md), note that kapt annotation processing tasks are not cached by default. However, you can
-[enable caching for them manually](kapt.md#gradle-build-cache-support).
-
 ## Gradle configuration cache support
 
-> Gradle configuration cache support has some constraints:
-> * The configuration cache is available in Gradle 6.5 and later as an experimental feature.  
-    >   You can check the [Gradle releases page](https://gradle.org/releases/) to see whether it has been promoted to stable.
-> * The feature is supported only by the following Gradle plugins:
-    >   * `org.jetbrains.kotlin.jvm`
->   * `org.jetbrains.kotlin.js`
->   * `org.jetbrains.kotlin.android`
->
-{type="note"}
-
 The Kotlin plugin uses the [Gradle configuration cache](https://docs.gradle.org/current/userguide/configuration_cache.html),
-which speeds up the build process by reusing the results of the configuration phase.
+which speeds up the build process by reusing the results of the configuration phase for subsequent builds.
 
 See the [Gradle documentation](https://docs.gradle.org/current/userguide/configuration_cache.html#config_cache:usage)
 to learn how to enable the configuration cache. After you enable this feature, the Kotlin Gradle plugin automatically
@@ -109,18 +91,29 @@ Each of the following ways to set arguments overrides the ones that came before 
 
 #### Gradle daemon arguments inheritance
 
-If nothing is specified, the Kotlin daemon inherits arguments from the Gradle daemon. For example, in the `gradle.properties` file:
+By default, the Kotlin daemon inherits a specific set of arguments from the Gradle daemon but overwrites them with any 
+JVM arguments specified directly for the Kotlin daemon. For example, if you add the following JVM arguments in the `gradle.properties` file:
 
 ```none
-org.gradle.jvmargs=-Xmx1500m -Xms=500m
+org.gradle.jvmargs=-Xmx1500m -Xms500m -XX:MaxMetaspaceSize=1g
 ```
+
+These arguments are then added to the Kotlin daemon's JVM arguments:
+
+```none
+-Xmx1500m -XX:ReservedCodeCacheSize=320m -XX:MaxMetaspaceSize=1g -XX:UseParallelGC -ea -XX:+UseCodeCacheFlushing -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Djava.rmi.server.hostname=127.0.0.1 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+```
+
+> To learn more about the Kotlin daemon's default behavior with JVM arguments, see [Kotlin daemon's behavior with JVM arguments](#kotlin-daemon-s-behavior-with-jvm-arguments).
+>
+{style="note"}
 
 #### kotlin.daemon.jvm.options system property
 
 If the Gradle daemon's JVM arguments have the `kotlin.daemon.jvm.options` system property – use it in the `gradle.properties` file:
 
 ```none
-org.gradle.jvmargs=-Dkotlin.daemon.jvm.options=-Xmx1500m,Xms=500m
+org.gradle.jvmargs=-Dkotlin.daemon.jvm.options=-Xmx1500m,Xms500m
 ```
 
 When passing arguments, follow these rules:
@@ -135,14 +128,20 @@ When passing arguments, follow these rules:
 >
 > To overcome this, upgrade Gradle to the version 7.2 (or higher) or use the `kotlin.daemon.jvmargs` property – see the following section.
 >
-{type="warning"}
+{style="warning"}
 
 #### kotlin.daemon.jvmargs property
 
 You can add the `kotlin.daemon.jvmargs` property in the `gradle.properties` file:
 
 ```none
-kotlin.daemon.jvmargs=-Xmx1500m -Xms=500m
+kotlin.daemon.jvmargs=-Xmx1500m -Xms500m
+```
+
+Note that if you don't specify the `ReservedCodeCacheSize` argument here or in Gradle's JVM arguments, the Kotlin Gradle plugin applies a default value of `320m`:
+
+```none
+-Xmx1500m -XX:ReservedCodeCacheSize=320m -Xms500m
 ```
 
 #### kotlin extension
@@ -187,8 +186,8 @@ tasks.withType<CompileUsingKotlinDaemon>().configureEach {
 <tab title="Groovy" group-key="groovy">
 
 ```groovy
-tasks.withType(CompileUsingKotlinDaemon::class).configureEach { task ->
-    task.kotlinDaemonJvmArguments.set(["-Xmx1g", "-Xms512m"])
+tasks.withType(CompileUsingKotlinDaemon).configureEach { task ->
+    task.kotlinDaemonJvmArguments = ["-Xmx1g", "-Xms512m"]
 }
 ```
 
@@ -197,7 +196,7 @@ tasks.withType(CompileUsingKotlinDaemon::class).configureEach { task ->
 
 > In this case a new Kotlin daemon instance can start on task execution. Learn more about [Kotlin daemon's behavior with JVM arguments](#kotlin-daemon-s-behavior-with-jvm-arguments).
 >
-{type="note"}
+{style="note"}
 
 ### Kotlin daemon's behavior with JVM arguments
 
@@ -210,8 +209,38 @@ When configuring the Kotlin daemon's JVM arguments, note that:
   > If you are already running a Kotlin daemon that has enough heap size to handle the compilation request,
   > even if other requested JVM arguments are different, this daemon will be reused instead of starting a new one.
   >
-  {type="note"}
-* If the `Xmx` argument is not specified, the Kotlin daemon will inherit it from the Gradle daemon.
+  {style="note"}
+
+If the following arguments aren't specified, the Kotlin daemon inherits them from the Gradle daemon:
+
+* `-Xmx`
+* `-XX:MaxMetaspaceSize`
+* `-XX:ReservedCodeCacheSize`. If not specified or inherited, the default value is `320m`.
+
+The Kotlin daemon has the following default JVM arguments:
+* `-XX:UseParallelGC`. This argument is only applied if no other garbage collector is specified.
+* `-ea`
+* `-XX:+UseCodeCacheFlushing`
+* `-Djava.awt.headless=true`
+* `-D{java.servername.property}={localhostip}`
+* `--add-exports=java.base/sun.nio.ch=ALL-UNNAMED`. This argument is only applied for JDK versions 16 or higher.
+
+> The list of default JVM arguments for the Kotlin daemon may vary between versions. You can use a tool like [VisualVM](https://visualvm.github.io/) to check the actual settings of a running JVM process, like the Kotlin daemon.
+>
+{style="note"}
+
+## Rolling back to the previous compiler
+
+From Kotlin 2.0.0, the K2 compiler is used by default.
+
+To use the previous compiler from Kotlin 2.0.0 onwards, either:
+
+* In your `build.gradle.kts` file, [set your language version](gradle-compiler-options.md#example-of-setting-languageversion) to `1.9`.
+
+  OR
+* Use the following compiler option: `-language-version 1.9`.
+
+To learn more about the benefits of the K2 compiler, see the [K2 compiler migration guide](k2-compiler-migration-guide.md).
 
 ## Defining Kotlin compiler execution strategy
 
@@ -221,7 +250,7 @@ There are three compiler execution strategies:
 
 | Strategy       | Where Kotlin compiler is executed          | Incremental compilation | Other characteristics and notes                                                                                                                                                                                                                                                |
 |----------------|--------------------------------------------|-------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Daemon         | Inside its own daemon process              | Yes                     | *The default and fastest strategy*. Can be shared between different Gradle daemons and multiple parallel compilations.                                                                                                                                                     |
+| Daemon         | Inside its own daemon process              | Yes                     | _The default and fastest strategy_. Can be shared between different Gradle daemons and multiple parallel compilations.                                                                                                                                                         |
 | In process     | Inside the Gradle daemon process           | No                      | May share the heap with the Gradle daemon. The "In process" execution strategy is _slower_ than the "Daemon" execution strategy. Each [worker](https://docs.gradle.org/current/userguide/worker_api.html) creates a separate Kotlin compiler classloader for each compilation. |
 | Out of process | In a separate process for each compilation | No                      | The slowest execution strategy. Similar to the "In process", but additionally creates a separate Java process within a Gradle worker for each compilation.                                                                                                                     |
 
@@ -274,7 +303,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompilerExecutionStrategy
 
 tasks.withType(CompileUsingKotlinDaemon)
     .configureEach {
-        compilerExecutionStrategy.set(KotlinCompilerExecutionStrategy.IN_PROCESS)
+        compilerExecutionStrategy = KotlinCompilerExecutionStrategy.IN_PROCESS
     }
 ```
 
@@ -296,8 +325,8 @@ Using fallback strategy: Compile without Kotlin daemon
 Try ./gradlew --stop if this issue persists.
 ```
 
-However, a silent fallback to another strategy can consume a lot of system resources or lead to non-deterministic builds, 
-read more about this in this [YouTrack issue](https://youtrack.jetbrains.com/issue/KT-48843/Add-ability-to-disable-Kotlin-daemon-fallback-strategy).
+However, a silent fallback to another strategy can consume a lot of system resources or lead to non-deterministic builds. 
+Read more about this in this [YouTrack issue](https://youtrack.jetbrains.com/issue/KT-48843/Add-ability-to-disable-Kotlin-daemon-fallback-strategy).
 To avoid this, there is a Gradle property `kotlin.daemon.useFallbackStrategy`, whose default value is `true`. 
 When the value is `false`, builds fail on problems with the daemon's startup or communication. Declare this property in
 `gradle.properties`:
@@ -332,30 +361,40 @@ tasks.named("compileKotlin").configure {
 
 If there is insufficient memory to run the compilation, you can see a message about it in the logs.
 
+## Trying the latest language version
+
+Starting with Kotlin 2.0.0, to try the latest language version, set the `kotlin.experimental.tryNext` property in your `gradle.properties`
+file. When you use this property, the Kotlin Gradle plugin increments the language version to one above the default value
+for your Kotlin version. For example, in Kotlin 2.0.0, the default language version is 2.0, so the property configures 
+language version 2.1.
+
+Alternatively, you can run the following command:
+
+```shell
+./gradlew assemble -Pkotlin.experimental.tryNext=true
+``` 
+
+In [build reports](#build-reports), you can find the language version used to compile each task.
+
 ## Build reports
 
-> Build reports are [Experimental](components-stability.md). They may be dropped or changed at any time.
-> Opt-in is required (see details below). Use them only for evaluation purposes. We appreciate your feedback on them
-> in [YouTrack](https://youtrack.jetbrains.com/issues/KT).
->
-{type="warning"}
-
-Build reports for tracking compiler performance are available starting from Kotlin 1.7.0. Reports contain the durations 
-of different compilation phases and reasons why compilation couldn't be incremental.
-
+Build reports contain the durations of different compilation phases and any reasons why compilation couldn't be incremental.
 Use build reports to investigate performance issues when the compilation time is too long or when it differs for the same
 project.
 
-Kotlin build reports help examine problems more efficiently than [Gradle build scans](https://scans.gradle.com/). 
-Lots of engineers use them to investigate build performance, but the unit of granularity in Gradle scans is a single Gradle task.
+Kotlin build reports help you to investigate problems with build performance more efficiently than with [Gradle build scans](https://scans.gradle.com/)
+that have a single Gradle task as the unit of granularity.
 
 There are two common cases that analyzing build reports for long-running compilations can help you resolve:
 * The build wasn't incremental. Analyze the reasons and fix underlying problems.
 * The build was incremental but took too much time. Try reorganizing source files — split big files,
   save separate classes in different files, refactor large classes, declare top-level functions in different files, and so on.
 
+Build reports also show the Kotlin version used in the project. In addition, starting with Kotlin 1.9.0,
+you can see which compiler was used to compile the code in your [Gradle build scans](https://scans.gradle.com/).
+
 Learn [how to read build reports](https://blog.jetbrains.com/kotlin/2022/06/introducing-kotlin-build-reports/#how_to_read_build_reports) 
-and [how build JetBrains uses build reports](https://blog.jetbrains.com/kotlin/2022/06/introducing-kotlin-build-reports/#how_we_use_build_reports_in_jetbrains).
+and about [how JetBrains uses build reports](https://blog.jetbrains.com/kotlin/2022/06/introducing-kotlin-build-reports/#how_we_use_build_reports_in_jetbrains).
 
 ### Enabling build reports
 
@@ -367,46 +406,62 @@ kotlin.build.report.output=file
 
 The following values and their combinations are available for the output:
 
-| Option        | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-|---------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `file`        | Saves build reports in a human-readable format to a local file. By default, it's `${project_folder}/build/reports/kotlin-build/${project_name}-timestamp.txt`                                                                                                                                                                                                                                                                                                                                               |
-| `single_file` | Saves build reports in a format of an object to a specified local file                                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| `build_scan`  | Saves build reports in the `custom values` section of the [build scan](https://scans.gradle.com/). Note that the Gradle Enterprise plugin limits the number of custom values and their length. In big projects, some values could be lost                                                                                                                                                                                                                                                                   |                                                                                                                                                                                                                                                                                                                                                                                               |
-| `http`        | Posts build reports using HTTP(S). The POST method sends metrics in JSON format. You can see the current version of the sent data in the [Kotlin repository](https://github.com/JetBrains/kotlin/blob/master/libraries/tools/kotlin-gradle-plugin/src/common/kotlin/org/jetbrains/kotlin/gradle/plugin/statistics/CompileStatisticsData.kt). You can find samples of HTTP endpoints in [this blog post](https://blog.jetbrains.com/kotlin/2022/06/introducing-kotlin-build-reports/#enable_build_reports)   |
+| Option | Description |
+|---|---|
+| `file` | Saves build reports in a human-readable format to a local file. By default, it's `${project_folder}/build/reports/kotlin-build/${project_name}-timestamp.txt` |
+| `single_file` | Saves build reports in a format of an object to a specified local file. |
+| `build_scan` | Saves build reports in the `custom values` section of the [build scan](https://scans.gradle.com/). Note that the Gradle Enterprise plugin limits the number of custom values and their length. In big projects, some values could be lost. |
+| `http` | Posts build reports using HTTP(S). The POST method sends metrics in JSON format. You can see the current version of the sent data in the [Kotlin repository](https://github.com/JetBrains/kotlin/blob/master/libraries/tools/kotlin-gradle-plugin/src/common/kotlin/org/jetbrains/kotlin/gradle/report/data/GradleCompileStatisticsData.kt). You can find samples of HTTP endpoints in [this blog post](https://blog.jetbrains.com/kotlin/2022/06/introducing-kotlin-build-reports/?_gl=1*1a7pghy*_ga*MTcxMjc1NzE5Ny4xNjY1NDAzNjkz*_ga_9J976DJZ68*MTcxNTA3NjA2NS4zNzcuMS4xNzE1MDc2MDc5LjQ2LjAuMA..&_ga=2.265800911.1124071296.1714976764-1712757197.1665403693#enable_build_reports) |
+| `json` | Saves build reports in JSON format to a local file. Set the location for your build reports in `kotlin.build.report.json.directory` (see below). By default, it's name is `${project_name}-build-<date-time>-<index>.json`. |
 
-Here's the full list of available options for `kotlin.build.report`:
+Here's a list of available options for `kotlin.build.report`:
 
 ```none
 # Required outputs. Any combination is allowed
-kotlin.build.report.output=file,single_file,http,build_scan
+kotlin.build.report.output=file,single_file,http,build_scan,json
 
 # Mandatory if single_file output is used. Where to put reports 
 # Use instead of the deprecated `kotlin.internal.single.build.metrics.file` property
 kotlin.build.report.single_file=some_filename
 
+# Mandatory if json output is used. Where to put reports 
+kotlin.build.report.json.directory=my/directory/path
+
 # Optional. Output directory for file-based reports. Default: build/reports/kotlin-build/
 kotlin.build.report.file.output_dir=kotlin-reports
 
-# Mandatory if HTTP output is used. Where to post HTTP(S)-based reports
+# Optional. Label for marking your build report (for example, debug parameters)
+kotlin.build.report.label=some_label
+```
+
+Options, applicable only to HTTP:
+
+```none
+# Mandatory. Where to post HTTP(S)-based reports
 kotlin.build.report.http.url=http://127.0.0.1:8080
 
 # Optional. User and password if the HTTP endpoint requires authentication
 kotlin.build.report.http.user=someUser
 kotlin.build.report.http.password=somePassword
 
-# Optional. Label for marking your build report (for example, debug parameters)
-kotlin.build.report.label=some_label
+# Optional. Add a Git branch name of a build to a build report
+kotlin.build.report.http.include_git_branch.name=true|false
+
+# Optional. Add compiler arguments to a build report
+# If a project contains many modules, its compiler arguments in the report can be very heavy and not that helpful
+kotlin.build.report.include_compiler_arguments=true|false
 ```
 
 ### Limit of custom values
 
 To collect build scans' statistics, Kotlin build reports use [Gradle's custom values](https://docs.gradle.com/enterprise/tutorials/extending-build-scans/). 
-Different Gradle plugins and you can also write data to custom values. The number of custom values has a limit. 
-See the current maximum custom value count in the [Build scan plugin docs](https://docs.gradle.com/enterprise/gradle-plugin/#adding_custom_values). 
+Both you and different Gradle plugins can write data to custom values. The number of custom values has a limit.
+See the current maximum custom value count in the [Build scan plugin docs](https://docs.gradle.com/enterprise/gradle-plugin/#adding_custom_values).
+
 If you have a big project, a number of such custom values may be quite big. If this number exceeds the limit, 
 you can see the following message in the logs:
 
-```
+```text
 Maximum number of custom values (1,000) exceeded
 ```
 
@@ -420,15 +475,17 @@ kotlin.build.report.build_scan.custom_values_limit=500
 
 HTTP build statistic logs can contain some project and system properties. These properties can change builds' behavior, 
 so it's useful to log them in build statistics. 
-These properties can store sensitive data, for example, passwords or a project's full path. 
-You can turn on this behavior by adding the `kotlin.build.report.http.verbose_environment` property to your `gradle.properties`.
+These properties can store sensitive data, for example, passwords or a project's full path.
+
+You can disable collection of these statistics by adding the `kotlin.build.report.http.verbose_environment` property to
+your `gradle.properties`.
 
 > JetBrains doesn't collect these statistics. You choose a place [where to store your reports](#enabling-build-reports).
 > 
-{type="note"}
+{style="note"}
 
 ## What's next?
 
 Learn more about:
-* [Gradle basics and specifics](https://docs.gradle.org/current/userguide/getting_started.html).
+* [Gradle basics and specifics](https://docs.gradle.org/current/userguide/userguide.html).
 * [Support for Gradle plugin variants](gradle-plugin-variants.md).
